<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.task.user.ui.fragment.AddFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.AddFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topMenu"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">

                <ImageButton
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/image_button"
                    android:onClick="@{() -> fragment.navigateUp()}"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_user"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivBack"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="@{() -> fragment.imageChooser()}"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    app:srcCompat="@drawable/ic_baseline_add_24"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/phone"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        style="@style/EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        style="@style/EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> fragment.addUser()}"
                    android:text="@string/add_user"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>