<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="size"
            type="Integer" />

        <variable
            name="from"
            type="String" />

        <variable
            name="to"
            type="String" />

        <variable
            name="format"
            type="String" />

        <variable
            name="fragment"
            type="com.task.user.ui.fragment.UsersFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".ui.fragment.UsersFragment">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp">

                    <TextView
                        android:id="@+id/tvName"
                        style="@style/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/ivFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="?android:selectableItemBackground"
                        android:onClick="@{() -> fragment.expandBottomSheet()}"
                        android:padding="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_filter_list_24"
                        app:tint="@color/white"
                        android:contentDescription="@string/image_button" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                tools:listitem="@layout/item_user" />

            <TextView
                style="@style/Title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/no_users_available"
                android:textColor="@color/black"
                android:visibility="@{size == 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/fab"
                android:onClick="@{() -> fragment.navigateToAdd()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <View
                android:id="@+id/dimLayer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/black_20"
                android:onClick="@{()-> fragment.collapseBottomSheet()}"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appbar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/bottomSheet"
            layout="@layout/filter_bottom_sheet"
            app:format="@{format}"
            app:fragment="@{fragment}"
            app:from="@{from}"
            app:to="@{to}" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>